--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,279 @@
 /* место для вашего кода */
+header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+  margin-left: -60px;
+}
+
+.header__menu-list {
+  display: flex;
+  justify-content: start;
+  list-style: none;
+  gap: 25px;
+  font-family: Raleway, serif;
+  font-weight: normal;
+}
+
+.header__menu-list li.non-active {
+  list-style: circle;
+  border-bottom: solid 1px black;
+}
+
+.header__address {
+  display: grid;
+  justify-self: end;
+  grid-template-columns: repeat(1, 1fr);
+  font-size: 18px;
+  font-family: Raleway, serif;
+  font-weight: normal;
+}
+
+.cover {
+  position: relative;
+  background-image: url(/images/cover.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: darken;
+}
+
+span {
+  display: block;
+}
+
+.cover__title {
+  letter-spacing: 30px;
+  font-family: Raleway, serif;
+  font-weight: bold;
+  padding: 165px 50px 207px 50px;
+  font-size: 100px;
+  color: white;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.cover__description {
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0 50px 50px 50px;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 22px;
+  color: white;
+  font-family: Raleway, serif;
+  font-weight: normal;
+  text-transform: uppercase;
+  word-spacing: 22px;
+}
+
+.bet-button {
+  flex-wrap: nowrap;
+  text-transform: uppercase;
+  background: transparent;
+  width: 256px;
+  height: 51px;
+  font-size: 22px;
+  box-shadow: none;
+  border: 1px solid white; 
+  color: white;
+  font-family: Raleway, serif;
+  font-weight: normal;
+}
+
+
+.lots {
+  margin: 183px 19px 118px 25px;
+}
+
+.lots__heading {
+  font-size: 40px;
+  margin-bottom: 27px;
+  font-family: Raleway, serif;
+  font-weight: bold;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  list-style: none;
+  color: white;
+}
+
+.card_type_film {
+  position: relative;
+  width: 334px;
+  height: 596px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-image: url(/images/card-lot-01.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 48px 40px 45px 40px;
+}
+
+.card_type_book {
+  width: 334px;
+  height: 596px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-image: url(/images/card-lot-02.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 48px 40px 45px 40px;
+}
+
+.card_type_picture {
+  width: 334px;
+  height: 596px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-image: url(/images/card-lot-03.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 48px 40px 45px 40px;
+}
+
+.card__title {
+  font-size: 22px;
+  text-decoration: underline;
+  text-decoration-color: gray;
+  font-family: Raleway, serif;
+  font-weight: bold;
+}
+
+.card__text {
+  font-size: 20px;
+  font-family: Raleway, serif;
+  font-weight: normal;
+}
+
+.lots__look-more-link {
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 40px;
+  font-size: 20px;
+  border-bottom: solid 1px black;
+  font-family: Raleway, serif;
+  font-weight: normal;
+}
+
+.about {
+  margin: 0 24px 180px 24px;
+}
+
+.about__columm {
+  display: flex;
+  gap: 72px;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  flex-shrink: 0;
+  margin-top: 35px;
+  margin-left: 47px;
+}
+
+.about__description {
+  margin-top: 133px;
+}
+
+.about__logo img {
+  width: 146px;
+  height: 114px;
+}
+
+.about__title {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 100px;
+  font-family: Raleway, serif;
+  font-weight: bold;
+}
+
+.about__text {
+  font-size: 20px;
+  font-family: Raleway, serif;
+  font-weight: normal;
+}
+
+.about__text.margin {
+  margin-bottom: 24px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 50px 82px 50px;
+}
+
+.footer__address {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  font-size: 18px;
+  font-family: Raleway, serif;
+  font-weight: normal;
+}
+
+.footer__menu-list {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(1, 1fr);
+  list-style: none;
+  font-size: 18px;
+  font-family: Raleway, serif;
+  font-weight: normal;
+}
+
+.footer__menu-list li.non-active {
+  border-bottom: solid 1px black;
+}
+
+.footer__social-list {
+  display: flex;
+  list-style: none;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
+
+.border {
+  text-decoration: underline;
+}
