Повторно исправил ошибки

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,7 @@ header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  margin-left: 50px;
-  margin-right: 50px;
+  padding: 92px 50px 95px 50px;
 }
 
 .header__logo-image {
@@ -42,7 +41,8 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  min-height: 100vh;
+  height: 757px;
+  padding: 165px 50px 50px 50px;
 }
 
 .overlay {
@@ -58,7 +58,6 @@ span {
   letter-spacing: 30px;
   font-family: Raleway, serif;
   font-weight: bold;
-  padding: 165px 50px 207px 50px;
   font-size: 100px;
   color: white;
 }
@@ -74,7 +73,6 @@ span {
 .cover__description {
   display: flex;
   flex-wrap: nowrap;
-  padding: 0 50px 50px 50px;
   justify-content: space-between;
   align-items: center;
   font-size: 22px;
@@ -83,6 +81,7 @@ span {
   font-weight: normal;
   text-transform: uppercase;
   word-spacing: 22px;
+  margin-top: 106px;
 }
 
 .bet-button {
@@ -101,11 +100,12 @@ span {
 
 
 .lots {
-  margin: 183px 19px 118px 25px;
+  margin: 183px 19px 118px 29px;
 }
 
 .lots__heading {
   font-size: 40px;
+  margin-left: 40px;
   margin-bottom: 27px;
   font-family: Raleway, serif;
   font-weight: bold;
