--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,8 @@ header {
 .header__logo-image {
   width: 148px;
   height: 105px;
-  margin-left: -60px;
+  position: relative;
+  left: -60px;
 }
 
 .header__menu-list {
@@ -17,6 +18,7 @@ header {
   justify-content: start;
   list-style: none;
   gap: 25px;
+  width: 400px;
   font-family: Raleway, serif;
   font-weight: normal;
 }
@@ -26,27 +28,30 @@ header {
   border-bottom: solid 1px black;
 }
 
-.header__address {
+.address {
   display: grid;
-  justify-self: end;
   grid-template-columns: repeat(1, 1fr);
   font-size: 18px;
   font-family: Raleway, serif;
   font-weight: normal;
 }
 
+.header__address {
+  justify-self: end;
+}
+
 .cover {
   position: relative;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 757px;
+  min-height: 757px;
   padding: 165px 50px 50px 50px;
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   background-blend-mode: darken;
 }
 
@@ -55,6 +60,7 @@ span {
 }
 
 .cover__title {
+  text-transform: uppercase;
   letter-spacing: 30px;
   font-family: Raleway, serif;
   font-weight: bold;
@@ -82,6 +88,7 @@ span {
   text-transform: uppercase;
   word-spacing: 22px;
   margin-top: 106px;
+  letter-spacing: mixed;
 }
 
 .bet-button {
@@ -115,49 +122,33 @@ span {
   gap: 25px;
   list-style: none;
   color: white;
+  flex-wrap: wrap;
+}
+
+.card_type {
+  position: relative;
+  width: 334px;
+  min-height: 596px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 48px 40px 45px 40px;
 }
 
 .card_type_film {
-  position: relative;
-  width: 334px;
-  height: 596px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  background-image: url(/images/card-lot-01.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 48px 40px 45px 40px;
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  width: 334px;
-  height: 596px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  background-image: url(/images/card-lot-02.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 48px 40px 45px 40px;
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  width: 334px;
-  height: 596px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  background-image: url(/images/card-lot-03.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 48px 40px 45px 40px;
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__title {
@@ -238,14 +229,6 @@ span {
   justify-content: space-between;
   align-items: center;
   padding: 0 50px 82px 50px;
-}
-
-.footer__address {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  font-size: 18px;
-  font-family: Raleway, serif;
-  font-weight: normal;
 }
 
 .footer__menu-list {
