--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,6 @@ header {
   grid-template-columns: repeat(1, 1fr);
   font-size: 18px;
   width: 240px;
-  height: 98;
   line-height: 1.25;
   font-family: Raleway, serif;
   font-weight: normal;
@@ -69,7 +68,6 @@ span {
   font-size: 100px;
   color: white;
   width: 1000px;
-  height: 385px;
   line-height: 1.3;
   padding: 165px 50px 0 50px;
 }
@@ -93,10 +91,9 @@ span {
   font-weight: normal;
   text-transform: uppercase;
   word-spacing: 19px;
-  position: absolute;
-  right: 50px;
-  left: 50px;
-  bottom: 50px;
+  margin-left: 50px;
+  margin-top: 99px;
+  margin-right: 50px;
   letter-spacing: mixed;
 }
 
